--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -22,3 +22,11 @@ resilience4j.circuitbreaker.instances.inventory.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
 resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+
+#Resilience4j Timeout Properties
+resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+
+#Resilience4j Retry Properties
+resilience4j.retry.instances.inventory.max-attempts=3
+resilience4j.retry.instances.inventory.wait-duration=5s
