--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.security.user.name=eureka
 spring.security.user.password=password
 spring.application.name=discovery-server
 logging.level.org.springframework.security=INFO
+
+
+management.zipkin.tracing.endpoint=http://localhost:9411
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
