--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -11,3 +11,7 @@ server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+
+management.zipkin.tracing.endpoint=http://localhost:9411
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
