--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -30,3 +30,8 @@ resilience4j.timelimiter.instances.inventory.timeout-duration=3s
 #Resilience4j Retry Properties
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
+
+
+management.zipkin.tracing.endpoint=http://localhost:9411
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
