--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,3 +5,8 @@ eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eurek
 
 server.port=0
 logging.level.root=INFO
+
+
+management.zipkin.tracing.endpoint=http://localhost:9411
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
